syntax = "proto3";

service TransactionManagerService {
  rpc LeaseSolicitation (LeaseRequest) returns (LeaseReply);
}

message DadInt {
    string key = 1;
    int32 value = 2;
}

message Lease {
    string key = 1;
    repeated DadInt dadInts = 2;
}

message LeaseRequest {
  repeated DadInt dadInts = 1
}

message LeaseReply {
    int32 epoch = 1;
	repeated Lease leases = 2;
}
